# GiskardFoundry

./: .gitignore  BRANCHING_MODEL.md  CHANGELOG.md  README.md  RELEASE_PROCESS.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
agents/: __init__.py
agents/example_agent/: __init__.py  agent.py  manifest.json
agents/example_agent/prompts/: system_prompt.txt
agents/gtd_agent/: __init__.py  agent.py  manifest.json
agents/gtd_agent/prompts/: system_prompt.txt
agents/jobsearch_agent/: __init__.py  agent.py  manifest.json
agents/jobsearch_agent/prompts/: system_prompt.txt
agents/onenote_agent/: __init__.py  agent.py  manifest.json
agents/onenote_agent/prompts/: system_prompt.txt
agents/orchestrator_agent/: __init__.py  agent.py  manifest.json
agents/orchestrator_agent/prompts/: system_prompt.txt
config/: __init__.py  agent_framework.json  agent_manifest_schema.json  settings.yaml
docs/: OnePromptTorulethemall.txt  architecture.md  maf_workflow_upgrade.md  phase2_architecture.md  phase3_evaluation_workflow.md
framework/: __init__.py  maf_integration.py
giskardfoundry/: __init__.py  config.py  registry.py
giskardfoundry/agents/: __init__.py  base.py  gtd_agent.py  jobsearch_agent.py  onenote_agent.py
giskardfoundry/core/: __init__.py
giskardfoundry/core/evaluation/: __init__.py  pipeline.py  result.py  runner.py
giskardfoundry/core/filters/: __init__.py  base.py  budget.py  nogo.py  region_risk.py
giskardfoundry/core/risk/: __init__.py  assessor.py  factors.py  (+1 more)
giskardfoundry/db/: __init__.py  base.py  session.py
giskardfoundry/facade/: __init__.py  exceptions.py  foundry_facade.py  request.py  response.py
giskardfoundry/susan_calvin/: __init__.py  orchestrator.py
migrations/: env.py
migrations/versions/: c12db837d3f7_initial_tables.py
orchestrator/: __init__.py  orchestrator.py  runner.py
scripts/: check_env.py  check_mvp.py  validate_manifests.py
src/giskardfoundry/: __init__.py  agents.py  config.py  registry.py
src/leadforgeai/: __init__.py  demo.py
tests/: __init__.py  test_framework_mapping.py  test_manifest_schema.py  test_orchestrator_agent.py  test_orchestrator_smoke.py  test_task_planner_tool.py
tests/facade/: test_foundry_facade.py  test_request_validation.py  test_response_schema.py
tools/: __init__.py  base_tool.py  context_override_tool.py  job_search_tool.py  onedrive_list_tool.py  onenote_read_tool.py  onenote_write_tool.py  registry.py  score_tool.py  semantic_description_tool.py  task_planner_tool.py
(+34 files in other folders)
