[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "giskardfoundry"
version = "0.1.0"
description = "Build-space for Giskard Agents and Susan_Calvin orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"pydantic",
	"requests",
	"python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["giskardfoundry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
