[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "giskardfoundry"
version = "0.1.0"
description = "Build-space for Giskard Agents and Susan_Calvin orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"pydantic",
	"requests",
	"python-dotenv",
	"agent-framework-azure-ai==1.0.0rc3",
	"agent-framework-core==1.0.0rc3",
	"azure-ai-agentserver-agentframework==1.0.0b16",
	"azure-ai-agentserver-core==1.0.0b16",
	"azure-identity",
]

[project.scripts]
giskardfoundry-server = "orchestrator.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["giskardfoundry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
