[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "giskardfoundry"
version = "0.1.0"
description = "Deterministic, auditable agent framework primitives and orchestration scaffolding."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
	{ name = "GiskardFoundry Contributors" }
]
keywords = ["agents", "automation", "orchestration", "deterministic"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"License :: Other/Proprietary License",
	"Operating System :: OS Independent"
]
dependencies = [
	"pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/drewbai/GiskardFoundry"
Repository = "https://github.com/drewbai/GiskardFoundry"

[tool.hatch.build.targets.wheel]
packages = ["src/giskardfoundry"]

[tool.hatch.build.targets.sdist]
include = [
	"src/giskardfoundry",
	"README.md",
	"pyproject.toml"
]
